[master] fixed image layout issue

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -23,7 +23,7 @@ img {
 }
 
 #_header_image {
-  background: rgba( 0, 0, 0, 0.5 ) image-url("bgi.png") no-repeat center;
+  background: rgba( 0, 0, 0, 0.54 ) image-url("bgi.png") no-repeat center;
   h3, p {
     //background-color: rgba( 0, 0, 0, 0.55 );
   }
